# stream_server/controllers/video.go
@@ -1,9 +1,7 @@
 package controllers
 
 import (
-	"encoding/json"
 	"fmt"
-	"github.com/gin-gonic/contrib/sessions"
 	"github.com/gin-gonic/gin"
 	"github.com/gofrs/uuid"
 	"gorm.io/gorm"
@@ -25,7 +23,7 @@ type VideoController struct {
 func VideoControllerRegister(group *gin.RouterGroup) {
 	video := &VideoController{}
 	group.POST("/upload", video.Upload)
-
+	group.GET("/videos", video.VideoIndex)
 }
 
 // Upload godoc
@@ -35,25 +33,18 @@ func VideoControllerRegister(group *gin.RouterGroup) {
 // @ID /video/upload
 // @Accept  json
 // @Produce  json
-// @Param polygon body dto.VideoInput true "body"
+// @Param polygon body dto.VideoUploadInput true "body"
 // @Success 200 {object} middleware.Response{data=string} "success"
 // @Router /video/upload [post]
 func (videoController VideoController) Upload(c *gin.Context) {
-	params := &dto.VideoInput{}
+	params := &dto.VideoUploadInput{}
 	if err := params.BindingValidParams(c); err != nil {
 		middleware.ResponseError(c, 2000, err)
 		return
 	}
-	session := sessions.Default(c)
-	adminInfo, ok := session.Get(common.AdminSessionInfoKey).(string)
-	if !ok || adminInfo == "" {
-		c.Abort()
-		return
-	}
-	var userInfo dto.AdminSessionInfo
-	err := json.Unmarshal([]byte(adminInfo), &userInfo)
+	userInfo, err := dto.GetUserInfoFromSession(c)
 	if err != nil {
-		fmt.Println(err)
+		middleware.ResponseError(c, 2001, err)
 		return
 	}
 	user := dao.User{Username: userInfo.UserName}
@@ -62,7 +53,7 @@ func (videoController VideoController) Upload(c *gin.Context) {
 	if err := c.Request.ParseMultipartForm(common.MaxUploadSize); err != nil {
 		log.Println("File is to big!")
 		log.Println(err)
-		common.SendErrorResponse(c.Writer, http.StatusBadRequest, "File is to big!")
+		middleware.ResponseError(c, 2002, err)
 		return
 	}
 	file, _, err := c.Request.FormFile("file")
@@ -115,6 +106,36 @@ func (videoController VideoController) Upload(c *gin.Context) {
 	c.Writer.WriteHeader(http.StatusOK)
 	io.WriteString(c.Writer, "Uploaded successfully")
 
+}
+
+// VideoIndex godoc
+// @Summary 视频列表
+// @Description 视频列表
+// @Tags 视频接口
+// @ID /video/videos
+// @Accept  json
+// @Produce  json
+// @Success 200 {object} middleware.Response{data=[]dto.VideoIndexOutput} "success"
+// @Router /video/videos [get]
+func (videoController VideoController) VideoIndex(c *gin.Context) {
+	userInfo, err := dto.GetUserInfoFromSession(c)
+	if err != nil {
+		middleware.ResponseError(c, 2003, err)
+	}
+	user := dao.User{Username: userInfo.UserName}
+	user = *user.Find()
+	video := dao.Video{AuthorID: user.ID}
+	videos := video.Find()
+	var videoOutputs []dto.VideoIndexOutput
+	for _, video := range *videos {
+		videoOutput := dto.VideoIndexOutput{
+			Title:      video.Title,
+			VideoID:    video.ID,
+			AuthorName: video.User.Username,
+		}
+		videoOutputs = append(videoOutputs, videoOutput)
+	}
+	middleware.ResponseSuccess(c, videoOutputs)
 }
 
 func StreamHandler(c *gin.Context) {
