# stream_server/docs/swagger.json
@@ -101,6 +101,17 @@
                 ],
                 "summary": "上传视频",
                 "operationId": "/video/upload",
+                "parameters": [
+                    {
+                        "description": "body",
+                        "name": "polygon",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.VideoUploadInput"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "success",
@@ -114,6 +125,45 @@
                                     "properties": {
                                         "data": {
                                             "type": "string"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
+        },
+        "/video/videos": {
+            "get": {
+                "description": "视频列表",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "视频接口"
+                ],
+                "summary": "视频列表",
+                "operationId": "/video/videos",
+                "responses": {
+                    "200": {
+                        "description": "success",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/middleware.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/definitions/dto.VideoIndexOutput"
+                                            }
                                         }
                                     }
                                 }
@@ -156,6 +206,48 @@
                     "description": "用户名",
                     "type": "string",
                     "example": "admin"
+                }
+            }
+        },
+        "dto.VideoIndexOutput": {
+            "type": "object",
+            "properties": {
+                "author_name": {
+                    "description": "视频作者名称",
+                    "type": "string",
+                    "example": "张三"
+                },
+                "title": {
+                    "description": "视频标题",
+                    "type": "string",
+                    "example": "标题1"
+                },
+                "video_id": {
+                    "description": "视频ID",
+                    "type": "integer",
+                    "example": 1
+                }
+            }
+        },
+        "dto.VideoUploadInput": {
+            "type": "object",
+            "required": [
+                "title"
+            ],
+            "properties": {
+                "introduction": {
+                    "description": "视频简介",
+                    "type": "string",
+                    "example": "视频简介..."
+                },
+                "public": {
+                    "type": "boolean",
+                    "example": true
+                },
+                "title": {
+                    "description": "视频标题",
+                    "type": "string",
+                    "example": "标题1"
                 }
             }
         },
